tests/e2e/fail/v32_fail_embed_missing.ep
# COMPILE_FAIL_CONTAINS: embed file not found: ../data/missing.txt
fun main(): void {
    println(embed "../data/missing.txt")
}
